{{$NEXT}}

0.2.0  2014-07-11 10:20:47 CEST
    - moved core parts to Text::MarkdownTable, renamed 

0.1.2  2014-06-25 11:23:48 CEST
    - better align with Catmandu::Exporter::CSV

v0.1.1  2014-06-18 12:40:42 CEST
    - support fixed column widths and truncation

v0.1.0  2014-06-15 10:39:39 CEST
    - inital release