@@ -36,7 +36,9 @@
       },
       "runtime" : {
          "requires" : {
-            "Text::MarkdownTable" : "v0.2.1",
+            "Catmandu" : "0.92",
+            "IO::Handle::Util" : "0.01",
+            "Text::MarkdownTable" : "v0.2.3",
             "perl" : "v5.10.0"
          }
       }
@@ -53,7 +55,7 @@
          "web" : "https://github.com/nichtich/Catmandu-Exporter-Table"
       }
    },
-   "version" : "0.2.0",
+   "version" : "0.2.1",
    "x_contributors" : [
       "Jakob Voss <voss@gbv.de>"
    ]
