@@ -1,3 +1,4 @@
 requires perl => '5.10.0';
 requires Catmandu => '0.92';
-requires 'Text::MarkdownTable' => '0.2.1';
+requires 'Text::MarkdownTable' => '0.2.3';
+requires 'IO::Handle::Util' => '0.01';
