@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - added support of JSON Table Schema
 
 0.2.0  2014-07-11 10:20:47 CEST
     - moved core parts to Text::MarkdownTable, renamed 
